[gd_scene load_steps=8 format=2]

[ext_resource path="res://Puzzles/QuadPuzzle.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/BloodBreak1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/BloodBreak2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/BloodBreak3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/BloodBreak4.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 16.3461

[node name="QuadPuzzle" type="Node2D"]
script = ExtResource( 1 )

[node name="Break1" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Break1"]
frames = SubResource( 1 )
playing = true

[node name="Break1Collider" type="CollisionShape2D" parent="Break1"]
shape = SubResource( 2 )

[node name="Break2" type="StaticBody2D" parent="."]
position = Vector2( 241.278, -7.62939e-006 )
collision_layer = 3
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Break2"]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Break2Collider" type="CollisionShape2D" parent="Break2"]
shape = SubResource( 2 )

[node name="Break3" type="StaticBody2D" parent="."]
position = Vector2( 241.278, 153.277 )
collision_layer = 3
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Break3"]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Break3Collider" type="CollisionShape2D" parent="Break3"]
shape = SubResource( 2 )

[node name="Break4" type="StaticBody2D" parent="."]
position = Vector2( -1.19748, 153.875 )
collision_layer = 3
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="Break4"]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="Break4Collider" type="CollisionShape2D" parent="Break4"]
shape = SubResource( 2 )

